--- a/my-theme.yml
+++ b/my-theme.yml
@@ -7,18 +7,39 @@
 #------
 font:
   catalog:
+  catalog:
+    Noto Serif:
+      normal: notoserif-regular-subset.ttf
+      bold: notoserif-bold-subset.ttf
+      italic: notoserif-italic-subset.ttf
+      bold_italic: notoserif-bold_italic-subset.ttf
+    M+ 1mn:
+      normal: mplus1mn-regular-subset.ttf
+      bold: mplus1mn-bold-subset.ttf
+      italic: mplus1mn-italic-subset.ttf
+      bold_italic: mplus1mn-bold_italic-subset.ttf
     KaiGen Gothic JP:
       normal: KaiGenGothicJP-Regular.ttf
       bold: KaiGenGothicJP-Bold.ttf
       italic: KaiGenGothicJP-Regular-Italic.ttf
       bold_italic: KaiGenGothicJP-Bold-Italic.ttf
-    Roboto Mono:
-      normal: RobotoMono-Regular.ttf
-      bold: RobotoMono-Bold.ttf
-      italic: RobotoMono-Italic.ttf
-      bold_italic: RobotoMono-BoldItalic.ttf
+    KaiGen Gothic JP:
+      normal: KaiGenGothicJP-Regular.ttf
+      bold: KaiGenGothicJP-Bold.ttf
+      italic: KaiGenGothicJP-Regular-Italic.ttf
+      bold_italic: KaiGenGothicJP-Bold-Italic.ttf
+    #GenYo Mincho JP:
+    #  normal: GenYoMinJP-Regular.ttf
+    #  bold: GenYoMinJP-Bold.ttf
+    #  italic: GenYoMinJP-Regular.ttf
+    #  bold_italic: GenYoMinJP-Bold.ttf
+    #Ricty Diminished:
+    #  normal: RictyDiminished-Regular.ttf
+    #  bold: RictyDiminished-Bold.ttf
+    #  italic: RictyDiminished-Oblique.ttf
+    #  bold_italic: RictyDiminished-BoldOblique.ttf
   fallbacks:
-    - KaiGen Gothic JP
+    - Noto Serif
 #------
 # Page Section
 #------
@@ -54,7 +75,7 @@ vertical_spacing: $vertical_rhythm
 # Literal Section
 #------
 literal:
-  font_family: Roboto Mono
+  font_family: KaiGen Gothic JP
   font_color: $base_font_color
   font_size: $base_font_size
   font_style: $base_font_style
@@ -62,7 +83,7 @@ literal:
 # Title Page Section
 #------
 title_page:
-  align: center
+  align: left
   logo:
     top: 10%
     align: right
@@ -70,24 +91,24 @@ title_page:
     top: 60%
     font_size: $heading_h1_font_size
     font_stye: bold
-    font_color: [255,255,255]
+    font_color: [0,0,0]
     line_height: 0.9
   subtitle:
     font_size: $heading_h3_font_size
     font_style: bold
-    font_color: [255,255,255]
+    font_color: [0,0,0]
     line_height: 1
   authors:
     font_size: $base_font_size_large
     font_style: normal
-    font_color: [255,255,255]
+    font_color: [0,0,0]
     margin_top: $base_font_size * 1.25
   revision:
     font_size: $base_font_size
     font_style: normal
-    font_color: [255,255,255]
+    font_color: [0,0,0]
     margin_top: $base_font_size * 1.25
-    # バージョンと日付を改行
+    # バージョンと日付を行替え
     delimiter: "<br/>"
 #------
 # Header Section
