--- a/my-theme.yml
+++ b/my-theme.yml
@@ -83,7 +83,7 @@ literal:
 # Title Page Section
 #------
 title_page:
-  align: left
+  align: center
   logo:
     top: 10%
     align: right
@@ -91,22 +91,22 @@ title_page:
     top: 60%
     font_size: $heading_h1_font_size
     font_stye: bold
-    font_color: [0,0,0]
+    font_color: [255,255,255]
     line_height: 0.9
   subtitle:
     font_size: $heading_h3_font_size
     font_style: bold
-    font_color: [0,0,0]
+    font_color: [255,255,255]
     line_height: 1
   authors:
     font_size: $base_font_size_large
     font_style: normal
-    font_color: [0,0,0]
+    font_color: [255,255,255]
     margin_top: $base_font_size * 1.25
   revision:
     font_size: $base_font_size
     font_style: normal
-    font_color: [0,0,0]
+    font_color: [255,255,255]
     margin_top: $base_font_size * 1.25
     # バージョンと日付を行替え
     delimiter: "<br/>"
