--- a/my-theme.yml
+++ b/my-theme.yml
@@ -23,7 +23,7 @@ title_page:
   title:
     top: 60%
     font_size: $heading_h1_font_size
-    font_stye: bold
+    font_style: bold
     font_color: #FFFFFF
     line_height: 0.9
   subtitle:
